--- a/client/public/index.html
+++ b/client/public/index.html
@@ -21,6 +21,9 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/bodymovin/5.7.4/lottie.min.js"></script>
+        <script async id="oval_model" src="https://ekyc-web.vnpt.vn/lib/VNPTBrowserSDKAppV3.1.2.js"></script>
+        <script src="https://ekyc-web.vnpt.vn/lib/jsQR.js"></script>
         <style>
             /* Customize the position of the floating entry */
             #chatbotAI {
@@ -61,4 +64,5 @@
       To begin the development, run `npm start` or `yarn start`.
       To create a production bundle, use `npm run build` or `yarn build`.
     --></body>
+   
 </html>
